# PokeTrack-App

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  DISCLAIMER.md  Dockerfile  LICENSE  PokeTrack-server.spec  PokeTrack.spec  README.md  config.example.json  languages.json  main.py  requirements.txt  run_web.py
.claude/: launch.json
.github/workflows/: ci.yml  codeql.yml  release.yml
data/: locations.json  regions_map.json
desktop/: README.md  package-lock.json  package.json
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
poketrack/: __init__.py  app_context.py  config.py  i18n.py
poketrack-native/: Cargo.toml  benchmark.py  pyproject.toml
poketrack-native/src/: lib.rs
poketrack/core/: __init__.py  asyncrunner.py  calendar.py  database.py  http.py  models.py  native.py  notify.py  parser.py  regions.py  scheduler.py  service.py  telegram.py  updates.py  webhook.py
poketrack/gui/: __init__.py  app.py  images.py  theme.py  tray.py
poketrack/web/: __init__.py  server.py
poketrack/web/static/: manifest.webmanifest  sw.js
poketrack/web/static/css/: style.css
poketrack/web/static/js/: app.js
poketrack/web/static/mockups/: index.html  mock-1-dashboard.html  mock-2-vibrant.html  mock-3-minimal.html  mock-4-dual.html  mock-5-fusion.html
poketrack/web/templates/: base.html  event.html  index.html  settings.html
tests/: test_poketrack.py
web-frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
web-frontend/src/: api.ts  countdown.ts  favorites.ts  main.ts  search.ts  theme.ts  toast.ts  types.ts
