[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "poketrack-native"
version = "0.1.0"
description = "Native (Rust) fast path for PokéTrack: feed parsing + region classification."
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
# Build the abi3 extension module named `poketrack_native`.
module-name = "poketrack_native"
features = ["pyo3/extension-module"]
